feat(java9): update the java 9 example